--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width"/>
         <title>ohmyfood</title>
-        <link rel="stylesheet" href="style_index.css">
+        <link rel="stylesheet" href="styles/style_index.css">
         <script src="https://kit.fontawesome.com/dc80972f73.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -24,10 +26,7 @@
             <div class="explorer">
                 <h1>Réservez le menu qui vous convient</h1>
                 <h2>Découvrez des restaurants d'exception, sélectionnés par nos soins.</h2>
-
-                <button class="bouton_explorer" type="submit" value="Explorer nos restaurants">
-                    <p>Explorer nos restaurants</p>
-                </div>
+                <input class="bouton_explorer" type="submit" value="Explorer nos restaurants">
             </div>
         </section>
 
@@ -69,6 +68,9 @@
             <div class="restaurant">
                 <a href="#">
                     <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" class="image_restaurant">
+                    <div class="nouveau">
+                        <p>Nouveau</p>
+                    </div>
                 </a>
                 <h3>La palette du goût</h3>
                 <p>Ménilmontant</p>
@@ -77,6 +79,9 @@
             <div class="restaurant">
                 <a href="#">
                     <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="image_restaurant">
+                    <div class="nouveau">
+                        <p>Nouveau</p>
+                    </div>
                 </a>
                 <h3>La note enchantée</h3>
                 <p>Charonne</p>
@@ -99,4 +104,17 @@
                 <i class="far fa-heart"></i>
             </div>
         </section>
+
+        <footer>
+            <div class="logo_footer">
+                <img src="images/ohmyfood.png" alt="ohmyfood" class="logo_footer_ohmyfood">
+            </div>
+
+            <ul>
+                <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
+                <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
+                <li>Mentions légales</li>
+                <li>Contact</li>
+            </ul>
+        </footer>
     </body>
