--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h2>Restaurants</h2>
 
             <div class="restaurant">
-                <a href="#">
+                <a href="lapalettedugout.html">
                     <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" class="image_restaurant">
                     <div class="nouveau">
                         <p class="nouveau__texte">Nouveau</p>
@@ -67,7 +67,7 @@
                 <div class="restaurant__icone"><i class="far fa-heart"></i></div>
             </div>
             <div class="restaurant">
-                <a href="#">
+                <a href="lanoteenchantee.html">
                     <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="image_restaurant">
                     <div class="nouveau">
                         <p class="nouveau__texte">Nouveau</p>
@@ -78,7 +78,7 @@
                 <div class="restaurant__icone"><i class="far fa-heart"></i></div>
             </div>
             <div class="restaurant">
-                <a href="#">
+                <a href="alafrancaise.html">
                     <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" class="image_restaurant">
                 </a>
                 <h3>À la française</h3>
@@ -86,7 +86,7 @@
                 <div class="restaurant__icone"><i class="far fa-heart"></i></div>
             </div>
             <div class="restaurant">
-                <a href="#">
+                <a href="ledelicedessens.html">
                     <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" class="image_restaurant">
                 </a>
                 <h3>Le délice des sens</h3>
