--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -24,12 +24,17 @@
         <main>
             <div class="titre_et_icone">
             <h1>La note enchantée</h1>
-            <div class="restaurant__icone"><i class="far fa-heart"></i></div>
+            <a class="favoris" href="#">
+                <span class="fa-stack fa-1x">
+                    <i class="far fa-heart fa-stack-1x"></i>
+                    <i class="fas fa-heart fa-stack-1x"></i>
+                </span>
+            </a>            
             </div>
             <div id="menus">
             <div class="categorie">
             <h2 class="underline">ENTRÉES</h2>
-            <div class="menu">
+            <div class="menu delai_1">
                 <div class="contenu">
                 <h3>Ravioles de foie gras</h3>
                 <p class="description">Accompagnés de leur crème à la truffe</p>
@@ -37,7 +42,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_2">
                 <div class="contenu">
                 <h3>Caviar osciètre</h3>
                 <p class="description">Sur blini à la farine de blé noir</p>
@@ -45,7 +50,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_3">
                 <div class="contenu">
                 <h3>Homard et espuma de potiron</h3>
                 <p class="description">Mariné aux zestes d'orange</p>
@@ -53,7 +58,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_4">
                 <div class="contenu">
                 <h3>Foie gras de canard cuit entier</h3>
                 <p class="description">Confiture de figue et pain toasté</p>
@@ -64,7 +69,7 @@
             </div>
             <div class="categorie">
             <h2 class="underline">PLATS</h2>
-            <div class="menu">
+            <div class="menu delai_5">
                 <div class="contenu">
                 <h3>Noix de coquilles Saint-Jacques</h3>
                 <p class="description">Sur lit de purée de céleri-rave</p>
@@ -72,7 +77,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_6">
                 <div class="contenu">
                 <h3>Langoustine poêlée</h3>
                 <p class="description">Purée de patate douce</p>
@@ -80,7 +85,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_7">
                 <div class="contenu">
                 <h3>Mijoté de queue de boeuf</h3>
                 <p class="description">Et riz sauvage aux zestes de citron</p>
@@ -91,7 +96,7 @@
             </div>
             <div class="categorie">
             <h2 class="underline">DESSERTS</h2>
-            <div class="menu">
+            <div class="menu delai_8">
                 <div class="contenu">
                 <h3>Macaron noisette et chocolat</h3>
                 <p class="description">Glace au caramel brun et sel de Guérande</p>
@@ -99,7 +104,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_9">
                 <div class="contenu">
                 <h3>Baba au rhum revisité</h3>
                 <p class="description">Avec son coulis de citron</p>
@@ -107,7 +112,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_10">
                 <div class="contenu">
                 <h3>Tarte au citron meringuée</h3>
                 <p class="description">Déstructurée</p>
