--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -24,12 +24,17 @@
         <main>
             <div class="titre_et_icone">
             <h1>À la française</h1>
-            <div class="restaurant__icone"><i class="far fa-heart"></i></div>
+            <a class="favoris" href="#">
+                <span class="fa-stack fa-1x">
+                    <i class="far fa-heart fa-stack-1x"></i>
+                    <i class="fas fa-heart fa-stack-1x"></i>
+                </span>
+            </a>            
             </div>
             <div id="menus">
             <div class="categorie">
             <h2 class="underline">ENTRÉES</h2>
-            <div class="menu">
+            <div class="menu delai_1">
                 <div class="contenu">
                 <h3>Tartare de poulpe acidulé</h3>
                 <p class="description">Aux zests d'orange</p>
@@ -37,7 +42,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_2">
                 <div class="contenu">
                 <h3>Velouté de légumes d'antan</h3>
                 <p class="description">Carotte, panais, topinambour</p>
@@ -45,7 +50,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_3">
                 <div class="contenu">
                 <h3>Soupe à l'oignon</h3>
                 <p class="description">Revisitée</p>
@@ -56,7 +61,7 @@
             </div>
             <div class="categorie">
             <h2 class="underline">PLATS</h2>
-            <div class="menu">
+            <div class="menu delai_4">
             <div class="contenu">
                 <h3>Coquilles Saint-Jacques</h3>
                 <p class="description">Accompagnées d'une purée de panais</p>
@@ -64,7 +69,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_5">
                 <div class="contenu">
                 <h3>Magret de canard</h3>
                 <p class="description">Et parmentier de pommes de terres</p>
@@ -72,7 +77,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_6">
                 <div class="contenu">
                 <h3>Pigeonneau d'Ille-et-Vilaine</h3>
                 <p class="description">Sur son lit de gnocchis aux légumes</p>
@@ -83,7 +88,7 @@
             </div>
             <div class="categorie">
             <h2 class="underline">DESSERTS</h2>
-            <div class="menu">
+            <div class="menu delai_7">
                 <div class="contenu">
                 <h3>Pétales de violettes glacés</h3>
                 <p class="description">Et purée de noisettes</p>
@@ -91,7 +96,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_8">
                 <div class="contenu">
                 <h3>Fondant au chocolat</h3>
                 <p class="description">Revisité</p>
@@ -99,7 +104,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_9">
                 <div class="contenu">
                 <h3>Millefeuille croustillant</h3>
                 <p class="description">Myrtilles et pâte d'amande</p>
