--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -24,12 +24,17 @@
         <main>
             <div class="titre_et_icone">
             <h1>La palette du goût</h1>
-            <div class="restaurant__icone"><i class="far fa-heart"></i></div>
+            <a class="favoris" href="#">
+                <span class="fa-stack fa-1x">
+                    <i class="far fa-heart fa-stack-1x"></i>
+                    <i class="fas fa-heart fa-stack-1x"></i>
+                </span>
+            </a>            
             </div>
             <div id="menus">
             <div class="categorie">
             <h2 class="underline">ENTRÉES</h2>
-            <div class="menu">
+            <div class="menu delai_1">
                 <div class="contenu">
                 <h3>Fricassée d'escargot</h3>
                 <p class="description">Au piment d'Espelette</p>
@@ -37,7 +42,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_2">
                 <div class="contenu">
                 <h3>Foie gras de canard mi-cuit</h3>
                 <p class="description">Et ses copeaux de truffe noire</p>
@@ -45,7 +50,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_3">
                 <div class="contenu">
                 <h3>Oeuf au plat</h3>
                 <p class="description">Assaisonné à la truffe sur lit de caviar</p>
@@ -56,7 +61,7 @@
             </div>
             <div class="categorie">
             <h2 class="underline">PLATS</h2>
-            <div class="menu">
+            <div class="menu delai_4">
                 <div class="contenu">
                 <h3>Filet de boeuf aux herbes</h3>
                 <p class="description">Accompagné de sa ribambelle de légumes</p>
@@ -64,7 +69,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_5">
                 <div class="contenu">
                 <h3>Parmentier de queue de boeuf</h3>
                 <p class="description">À la truffe noire sur sa purée de panais</p>
@@ -72,7 +77,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_6">
                 <div class="contenu">
                 <h3>Filet de turbot</h3>
                 <p class="description">Aux agrumes</p>
@@ -83,7 +88,7 @@
             </div>
             <div class="categorie">
             <h2 class="underline">DESSERTS</h2>
-            <div class="menu">
+            <div class="menu delai_7">
                 <div class="contenu">
                 <h3>Paris-Brest</h3>
                 <p class="description">Revisité</p>
@@ -91,7 +96,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_8">
                 <div class="contenu">
                 <h3>Macaron au chocolat d'exception</h3>
                 <p class="description">Et glace à la vanille de Madagascar</p>
@@ -99,7 +104,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_9">
                 <div class="contenu">
                 <h3>Mousse au chocolat</h3>
                 <p class="description">Au piment d'Espelette et à la truffe noire</p>
