--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -24,12 +24,17 @@
         <main>
             <div class="titre_et_icone">
             <h1>Le délice des sens</h1>
-            <div class="restaurant__icone"><i class="far fa-heart"></i></div>
+            <a class="favoris" href="#">
+                <span class="fa-stack fa-1x">
+                    <i class="far fa-heart fa-stack-1x"></i>
+                    <i class="fas fa-heart fa-stack-1x"></i>
+                </span>
+            </a>            
             </div>
             <div id="menus">
             <div class="categorie">
             <h2 class="underline">ENTRÉES</h2>
-            <div class="menu">
+            <div class="menu delai_1">
                 <div class="contenu">
                 <h3>Tartare de thon</h3>
                 <p class="description">Assaisonné au yuzu</p>
@@ -37,7 +42,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_2">
                 <div class="contenu">
                 <h3>Bouchée de homard croustillant</h3>
                 <p class="description">Et sa farandole de petits légumes</p>
@@ -45,7 +50,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_3">
                 <div class="contenu">
                 <h3>Velouté de cèpes</h3>
                 <p class="description">Aux truffes</p>
@@ -56,7 +61,7 @@
             </div>
             <div class="categorie">
             <h2 class="underline">PLATS</h2>
-            <div class="menu">
+            <div class="menu delai_4">
                 <div class="contenu">
                 <h3>Poulet rôti aux herbes de Provence</h3>
                 <p class="description">Et sa crème de truffe</p>
@@ -64,7 +69,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_5">
                 <div class="contenu">
                 <h3>Langouste rôtie</h3>
                 <p class="description">Et ses légumes de saison</p>
@@ -72,7 +77,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_6">
                 <div class="contenu">
                 <h3>Côte de boeuf Angus</h3>
                 <p class="description">Et sa purée de panais</p>
@@ -83,7 +88,7 @@
             </div>
             <div class="categorie">
             <h2 class="underline">DESSERTS</h2>
-            <div class="menu">
+            <div class="menu delai_7">
                 <div class="contenu">
                 <h3>Farandole de desserts</h3>
                 <p class="description">Du chef</p>
@@ -91,7 +96,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_8">
                 <div class="contenu">
                 <h3>Crème brulée</h3>
                 <p class="description">Revisitée</p>
@@ -99,7 +104,7 @@
                 </div>
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
-            <div class="menu">
+            <div class="menu delai_9">
                 <div class="contenu">
                 <h3>Tiramisu</h3>
                 <p class="description">À la noisette</p>
