--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -125,7 +125,7 @@
                 <li><div class="icone_ustensiles"><i class="fas fa-utensils"></i></div>Proposer un restaurant</li>
                 <li><div class="icone_partenaire"><i class="fas fa-hands-helping"></i></div>Devenir partenaire</li>
                 <li>Mentions légales</li>
-                <li>Contact</li>
+                <a href="mailto:ohmyfood@gmail.com"><li>Contact</li></a>
             </ul>
         </footer>
     </body>
