Correction sur html catégories

--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -32,7 +32,7 @@
             </a>            
             </div>
             <div id="menus">
-            <div class="categorie">
+            <div class="categorie_1">
             <h2 class="underline">ENTRÉES</h2>
             <div class="menu delai_1">
                 <div class="contenu">
@@ -67,7 +67,7 @@
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
             </div>
-            <div class="categorie">
+            <div class="categorie_2">
             <h2 class="underline">PLATS</h2>
             <div class="menu delai_5">
                 <div class="contenu">
@@ -94,7 +94,7 @@
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
             </div>
-            <div class="categorie">
+            <div class="categorie_3">
             <h2 class="underline">DESSERTS</h2>
             <div class="menu delai_8">
                 <div class="contenu">
