--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -32,7 +32,7 @@
             </a>            
             </div>
             <div id="menus">
-            <div class="categorie">
+            <div class="categorie_1">
             <h2 class="underline">ENTRÉES</h2>
             <div class="menu delai_1">
                 <div class="contenu">
@@ -59,7 +59,7 @@
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
             </div>
-            <div class="categorie">
+            <div class="categorie_2">
             <h2 class="underline">PLATS</h2>
             <div class="menu delai_4">
                 <div class="contenu">
@@ -86,7 +86,7 @@
                 <div class="confirmation"><div class="confirmation__icone"><i class="fas fa-check"></i></div></div>
             </div>
             </div>
-            <div class="categorie">
+            <div class="categorie_3">
             <h2 class="underline">DESSERTS</h2>
             <div class="menu delai_7">
                 <div class="contenu">
