--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <li><div class="icone_ustensiles"><i class="fas fa-utensils"></i></div>Proposer un restaurant</li>
                 <li><div class="icone_partenaire"><i class="fas fa-hands-helping"></i></div>Devenir partenaire</li>
                 <li>Mentions légales</li>
-                <a href="mailto:ohmyfood@gmail.com"><li>Contact</li></a>
+                <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
             </ul>
         </footer>
     </body>
